--- a/style.css
+++ b/style.css
@@ -12,5 +12,9 @@ header {
 
 section {
     background-color: rgb (117, 112, 112);
-    padding-top: ;
+    padding-top: 80px;
+    padding-bottom: 80px;
+    display:flex;
+    justify-content: center;
+    
 }
